--- a/scss/blocks/_skills.scss
+++ b/scss/blocks/_skills.scss
@@ -20,11 +20,14 @@
             font-weight: 500;
         }
         &-icon{
+            height: 100px;
             height: 65px;
-            width: 100px;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
             img{
                 height: 65px;
-                width: 100%;
+                width: 130px;
             }
             
         }
